# hpc-cuda

./: .gitignore
dense-matrix-mult/: CMakeLists.txt  requirements.txt
dense-matrix-mult/binding/: intensity.py  interface.cpp  runner.py
dense-matrix-mult/src/: data_types.h  driver.cu  driver.h  main.cu  util.cu  util.hpp
dense-matrix-mult/src/kernels/: kernels.h  parallel.cu  serial.cu
dense-matrix-mult/tests/: tests.cpp
sparse-mat-vec/: CMakeLists.txt
sparse-mat-vec/binding/: ht_runner.py  interface.cpp
sparse-mat-vec/src/: aux.cpp  aux.h  data_types.h  main.cpp  util.cpp  util.h
sparse-mat-vec/src/solvers/heat_transfer/: ht.h  ht_band.cu  ht_cusparse.cu  ht_driver.cpp  ht_ellpack.cu
sparse-mat-vec/src/solvers/kernels/: kernels.cu  kernels.h
sparse-mat-vec/src/solvers/pagerank/: pr.cu  pr.h
sparse-mat-vec/tests/: gpu_tests.cu  host_tests.cpp  test_aux.cpp  test_aux.h
stencil-2d/: CMakeLists.txt  main.py
stencil-2d/profiling/: main.cpp
stencil-2d/src/: aux.cpp  aux.h  data_types.h  interface.cpp  solver.cpp  solver.h
stencil-2d/src/implementations/: cpu.cpp  gpu.cu
stencil-2d/src/kernels/: kernels.cu  kernels.h
stencil-2d/tests/: gpu_tests.cu  host_tests.cpp
